<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/protein_weight_unit"
        android:entries="@array/units_of_weight_food"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        />
    <EditText
        android:layout_width="@dimen/daily_point_calc_edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/default_value"
        android:textColorHint="@color/deep_grey"
        android:ems="10"
        android:padding="5dp"
        android:id="@+id/food_protein"
        android:layout_marginRight="@dimen/daily_point_calc_left_margin"
        android:layout_toLeftOf="@+id/protein_weight_unit"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:layout_alignBaseline="@id/protein_weight_unit"
        android:background="@drawable/edit_text_input"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:textColor="@color/white"
        android:layout_toLeftOf="@+id/food_protein"
        android:layout_marginRight="20dp"
        android:layout_alignBaseline="@id/protein_weight_unit"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/carb_weight_unit"
        android:layout_below="@+id/protein_weight_unit"
        android:entries="@array/units_of_weight_food"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        />
    <EditText
        android:layout_width="@dimen/daily_point_calc_edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/default_value"
        android:textColorHint="@color/deep_grey"
        android:ems="10"
        android:id="@+id/food_carbohydrate"
        android:padding="5dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:layout_marginRight="@dimen/daily_point_calc_left_margin"
        android:layout_toLeftOf="@+id/carb_weight_unit"
        android:layout_alignBaseline="@id/carb_weight_unit"
        android:background="@drawable/edit_text_input"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrate"
        android:layout_toLeftOf="@+id/food_carbohydrate"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:textColor="@color/white"
        android:layout_alignBaseline="@id/carb_weight_unit"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/fat_weight_unit"
        android:layout_below="@+id/carb_weight_unit"
        android:entries="@array/units_of_weight_food"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        />
    <EditText
        android:layout_width="@dimen/daily_point_calc_edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/default_value"
        android:textColorHint="@color/deep_grey"
        android:ems="10"
        android:id="@+id/food_fat"
        android:padding="5dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:layout_marginRight="@dimen/daily_point_calc_left_margin"
        android:layout_toLeftOf="@+id/fat_weight_unit"
        android:layout_alignBaseline="@id/fat_weight_unit"
        android:background="@drawable/edit_text_input"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:layout_toLeftOf="@+id/food_fat"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:textColor="@color/white"
        android:layout_alignBaseline="@id/fat_weight_unit"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/fiber_weight_unit"
        android:layout_below="@+id/fat_weight_unit"
        android:entries="@array/units_of_weight_food"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        />
    <EditText
        android:layout_width="@dimen/daily_point_calc_edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/default_value"
        android:textColorHint="@color/deep_grey"
        android:ems="10"
        android:id="@+id/food_fiber"
        android:padding="5dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:layout_marginRight="@dimen/daily_point_calc_left_margin"
        android:layout_toLeftOf="@+id/fiber_weight_unit"
        android:layout_alignBaseline="@id/fiber_weight_unit"
        android:background="@drawable/edit_text_input"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiber"
        android:layout_toLeftOf="@+id/food_fiber"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:textColor="@color/white"
        android:layout_alignBaseline="@id/fiber_weight_unit"/>

    <TextView
        android:id="@+id/total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@id/food_fiber"
        android:layout_alignEnd="@id/food_fiber"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        android:layout_below="@id/fiber_weight_unit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:text="@string/total_points"
        android:textColor="@color/white"
        android:layout_toLeftOf="@id/total_points"
        android:layout_alignBaseline="@id/total_points"/>

    <LinearLayout
        android:id="@+id/submit_reset_button_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_points"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/daily_point_calc_text_size"
                android:textColor="@color/white"
                android:text="@string/clear_button"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/daily_point_calc_text_size"
                android:textColor="@color/white"
                android:text="@string/submit_button"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit_reset_button_view"
        android:layout_marginTop="@dimen/daily_point_calc_top_margin"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/daily_point_calc_text_size"
        android:text="@string/save_button"
        android:visibility="gone"/>

</RelativeLayout>