<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue">

    <TextView
        android:id="@+id/user_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/white"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/daily_point_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/user_account_text_size"
        android:text="@string/daily_point_description"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_below="@+id/user_account_name"
        />

    <TextView
        android:id="@+id/daily_points_value"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:layout_below="@+id/daily_point_desc"
        android:layout_width="match_parent"
        android:textSize="@dimen/user_account_title_text_size"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/daily_bmi_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/user_account_text_size"
        android:textColor="@color/white"
        android:text="@string/daily_bmi_description"
        android:layout_below="@+id/daily_points_value"
        />

    <TextView
        android:id="@+id/daily_bmi_value"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:layout_below="@+id/daily_bmi_desc"
        android:layout_width="match_parent"
        android:textSize="@dimen/user_account_title_text_size"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_below="@+id/daily_bmi_value"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_margin="4dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/calculate_food_points"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/carb_drawable">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="Calculate Food Points"
                android:gravity="center_vertical|left"
                android:textSize="25dp"
                android:paddingLeft="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_calendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/fat_drawable">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="View My Calendar"
                android:gravity="center_vertical|left"
                android:textSize="25dp"
                android:paddingLeft="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/calculate_bmi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/protein_drawable">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="Calculate BMI"
                android:gravity="center_vertical|left"
                android:textSize="25dp"
                android:paddingLeft="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/switch_account"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/fiber_drawable">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="Switch Account"
                android:gravity="center_vertical|left"
                android:textSize="25dp"
                android:paddingLeft="40dp"/>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>